@@ -16,7 +16,7 @@
  *
  */
 
-package distributions;
+package peersim.vector;
 
 import peersim.config.*;
 import peersim.core.*;
